--- a/Projetos/Projeto1/Vagrantfile
+++ b/Projetos/Projeto1/Vagrantfile
@@ -1,7 +1,7 @@
 Vagrant.configure('2') do |config|
   config.vm.define "vm1" do |vm1|
     vm1.vm.box = "boxomatic/debian-12"
-    vm1.vm.network "public_network", bridge: "wlp3s0", type: "dhcp"
+    vm1.vm.network "public_network", bridge: "wlp3s0", ip: "192.168.15.8"
     vm1.vm.provision "shell", path: "script1.sh", privileged: true
     vm1.vm.provider "virtualbox" do |vb|
       vb.name = "Zabbix Server"
@@ -10,7 +10,7 @@ Vagrant.configure('2') do |config|
 
   config.vm.define "vm2" do |vm2|
     vm2.vm.box = "boxomatic/debian-12"
-    vm2.vm.network "public_network", bridge: "wlp3s0", type: "dhcp"
+    vm2.vm.network "public_network", bridge: "wlp3s0", ip: "192.168.15.9"
     vm2.vm.provision "shell", path: "script1.sh", privileged: true
     vm2.vm.provider "virtualbox" do |vb|
       vb.name = "Banco de Dados"
@@ -19,27 +19,31 @@ Vagrant.configure('2') do |config|
 
   config.vm.define "vm3" do |vm3|
     vm3.vm.box = "boxomatic/debian-12"
-    vm3.vm.network "public_network", bridge: "wlp3s0", type: "dhcp"
+    vm3.vm.network "public_network", bridge: "wlp3s0", ip: "192.168.15.10"
     vm3.vm.provision "shell", path: "script1.sh", privileged: true
     vm3.vm.provider "virtualbox" do |vb|
-      vb.name = "Web"
-    end
-  end
- 
-  config.vm.define "vm4" do |vm4|
-    vm4.vm.box = "boxomatic/debian-12"
-    vm4.vm.network "public_network", bridge: "wlp3s0", type: "dhcp"
-    vm4.vm.provider "virtualbox" do |vb|
-      vb.name = "Grafana"
+      vb.name = "Web"    
     end
   end
 
-  config.vm.define "vm5" do |vm5|
-    vm5.vm.box = "boxomatic/debian-12"
-    vm5.vm.network "public_network", bridge: "wlp3s0", type: "dhcp"
-    vm5.vm.provider "virtualbox" do |vb|
-      vb.name = "Jasper"
+  config.vm.define "vm4" do |vm4|
+    vm4.vm.box = "boxomatic/debian-12"
+    vm4.vm.network "public_network", bridge: "wlp3s0", ip: "192.168.15.11"
+    vm4.vm.provision "shell", path: "script1.sh", privileged: true
+    vm4.vm.provider "virtualbox" do |vb|
+      vb.name = "Grafana"    
     end
   end
+
+
+  config.vm.define "vm5" do |vm5|
+    vm5.vm.box = "boxomatic/debian-12"
+    vm5.vm.network "public_network", bridge: "wlp3s0", ip: "192.168.15.12"
+    vm5.vm.provision "shell", privileged: true , path: "script1.sh" 
+    vm5.vm.provider "virtualbox" do |vb|
+      vb.name = "GLPI"    
+    end
+  end
+
 
 end
